--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.0.1",
+    "@angular/cdk": "^18.0.1",
     "@angular/common": "^18.0.1",
     "@angular/compiler": "^18.0.1",
     "@angular/core": "^18.0.1",
     "@angular/forms": "^18.0.1",
+    "@angular/material": "^18.0.1",
     "@angular/platform-browser": "^18.0.1",
     "@angular/platform-browser-dynamic": "^18.0.1",
     "@angular/router": "^18.0.1",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "ngx-markdown": "^18.0.0",
+    "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.6"
@@ -29,6 +32,7 @@
     "@angular/cli": "~18.0.2",
     "@angular/compiler-cli": "^18.0.1",
     "@types/jasmine": "~4.3.0",
+    "@types/prismjs": "^1.26.4",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
